--- a/style.css
+++ b/style.css
@@ -1,29 +1,43 @@
 /**
- * TODO
- * @author:     Michael Klier <chi@chimeric.de>
- * @homepage:   http://www.chimeric.de
+ * stylesheet for plugin lastfm
+ *
+ * @author Michael Klier <chi@chimeric.de>
  */
 
-div.dokuwiki ul.plugin_lastfm_topalbums,
-div.dokuwiki ul.plugin_lastfm_toptracks,
-div.dokuwiki ul.plugin_lastfm_topartists,
-div.dokuwiki ul.plugin_lastfm_recenttracks {
-    list-style-type:none;
-    list-style-image:none;
-    margin-left:0.2em;
+div.dokuwiki div#plugin_lastfm_topartists,
+div.dokuwiki div#plugin_lastfm_topalbums,
+div.dokuwiki div#plugin_lastfm_toptracks,
+div.dokuwiki div#plugin_lastfm_friends,
+div.dokuwiki div#plugin_lastfm_neighbours,
+div.dokuwiki div#plugin_lastfm_recenttracks,
+div.dokuwiki div#plugin_lastfm_weeklyartistchart,
+div.dokuwiki div#plugin_lastfm_weeklyalbumchart,
+div.dokuwiki div#plugin_lastfm_weeklytrackchart {
 }
 
-div.dokuwiki span.plugin_lastfm_rank {
-    font-weight:bold;
+div.dokuwiki span.plugin_lastfm_charttype {
+  color:#d20039;
+  font-weight:bold;
 }
 
-div.dokuwiki div.plugin_lastfm_type {
-    color:#d20039;
-    font-weight:bold;
+div.dokuwiki table.plugin_lastfm_chart {
+  line-height: 120%;
+}
+
+div.dokuwiki td.plugin_lastfm_rank {
+  color: #666;
+  padding-right: 0.3em;
+  border-right: 1px dotted #666;
+}
+
+div.dokuwiki td.plugin_lastfm_artist,
+div.dokuwiki td.plugin_lastfm_count,
+div.dokuwiki td.plugin_lastfm_track,
+div.dokuwiki td.plugin_lastfm_tag {
+  padding-right: 0.3em;
 }
 
 div.dokuwiki div.plugin_lastfm_playcount {
-}
-
-div.dokuwiki div.plugin_lastfm_date {
+  background: #ccc url(images/chart_end.gif) no-repeat right;
+  padding-left: 0.3em;
 }
